--- a/chrome/locale/en-US/papermachines/papermachines.dtd
+++ b/chrome/locale/en-US/papermachines/papermachines.dtd
@@ -1,18 +1,26 @@
 <!ENTITY papermachines.name									"Paper Machines">
+
 <!ENTITY papermachines.collectionmenu.extract_text			"Extract Text for Paper Machines">
-<!ENTITY papermachines.collectionmenu.count_text			"Count Texts">
-<!ENTITY papermachines.collectionmenu.build_csv				"Build CSV">
+
 <!ENTITY papermachines.collectionmenu.wordcloud				"Word Cloud">
 <!ENTITY papermachines.collectionmenu.phrasenet				"Phrase Net">
 <!ENTITY papermachines.collectionmenu.geodict				"Geodict">
 <!ENTITY papermachines.collectionmenu.dbpedia				"DBPedia Annotation">
+
 <!ENTITY papermachines.collectionmenu.topicmodeling			"Topic Modeling">
 <!ENTITY papermachines.collectionmenu.mallet				"By Time">
 <!ENTITY papermachines.collectionmenu.mallet_categorical	"By Subcollection">
-<!ENTITY papermachines.collectionmenu.mallet_classify		"Classification">
+
+<!ENTITY papermachines.collectionmenu.mallet_classify			"Classification">
 <!ENTITY papermachines.collectionmenu.mallet_train-classifier	"Train Classifier">
 <!ENTITY papermachines.collectionmenu.mallet_classify-file		"Test Classification">
 
 <!ENTITY papermachines.collectionmenu.reset_output			"Reset Output of Paper Machines">
+
 <!ENTITY papermachines.itemmenu.text_in_topic_view			"Show Text in Topic View">
 <!ENTITY papermachines.itemmenu.text_in_map_view			"Locate Text in Map View">
+
+<!ENTITY papermachines.dialog.title							"Paper Machines">
+<!ENTITY papermachines.dialog.intro							"Set process parameters">
+<!ENTITY papermachines.dialog.cancel						"Cancel">
+<!ENTITY papermachines.dialog.accept						"OK">
