--- a/chrome/locale/en-US/papermachines/papermachines.dtd
+++ b/chrome/locale/en-US/papermachines/papermachines.dtd
@@ -4,12 +4,12 @@
 
 <!ENTITY papermachines.collectionmenu.wordcloud				"Word Cloud">
 <!ENTITY papermachines.collectionmenu.phrasenet				"Phrase Net">
-<!ENTITY papermachines.collectionmenu.geodict				"Geoparser">
+<!ENTITY papermachines.collectionmenu.geoparse				"Geoparser">
 <!ENTITY papermachines.collectionmenu.dbpedia				"DBPedia Annotation">
 
 <!ENTITY papermachines.collectionmenu.topicmodeling			"Topic Modeling">
-<!ENTITY papermachines.collectionmenu.mallet				"By Time">
-<!ENTITY papermachines.collectionmenu.mallet_categorical	"By Subcollection">
+<!ENTITY papermachines.collectionmenu.mallet_lda				"By Time">
+<!ENTITY papermachines.collectionmenu.mallet_lda_categorical	"By Subcollection">
 
 <!ENTITY papermachines.collectionmenu.mallet_classify			"Classification">
 <!ENTITY papermachines.collectionmenu.mallet_train-classifier	"Train Classifier">
