more flexible dialog, i18n, version bump, multi-worcloud

--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -1,1 +1,13 @@
 progress.extractText			= Pre-processing collection %S
+processNames.wordcloud = Word Cloud
+processNames.wordcloud_large = Word Cloud
+processNames.wordcloud_multiple = Multiple Word Clouds
+processNames.phrasenet = Phrase Net
+processNames.geoparse = Geoparser
+processNames.mallet_lda = Topic Modeling
+processNames.mallet_lda_categorical = Topic Modeling
+processNames.mallet_train-classifier = Classifier Training
+processNames.mallet_classify-file = Classifier Testing
+processNames.dbpedia = DBpedia Annotation
+prompts.mallet_classify-file = Select classifier to use
+prompts.mallet_lda_jstor = Add JSTOR DFR set
