--- a/chrome/locale/en-US/papermachines/papermachines.dtd
+++ b/chrome/locale/en-US/papermachines/papermachines.dtd
@@ -3,6 +3,8 @@
 <!ENTITY papermachines.collectionmenu.extract_text			"Extract Text for Paper Machines">
 
 <!ENTITY papermachines.collectionmenu.wordcloud				"Word Cloud">
+<!ENTITY papermachines.collectionmenu.wordcloud_large		"Single Word Cloud">
+<!ENTITY papermachines.collectionmenu.wordcloud_multiple	"Multiple Word Clouds">
 <!ENTITY papermachines.collectionmenu.phrasenet				"Phrase Net">
 <!ENTITY papermachines.collectionmenu.geoparse				"Geoparser">
 <!ENTITY papermachines.collectionmenu.dbpedia				"DBPedia Annotation">
@@ -21,6 +23,5 @@
 <!ENTITY papermachines.itemmenu.text_in_map_view			"Locate Text in Map View">
 
 <!ENTITY papermachines.dialog.title							"Paper Machines">
-<!ENTITY papermachines.dialog.intro							"Select classifier to use">
 <!ENTITY papermachines.dialog.cancel						"Cancel">
 <!ENTITY papermachines.dialog.accept						"OK">
