prompt before resetting output, Mann-Whitney U test

--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -11,3 +11,4 @@ processNames.mallet_classify-file = Classifier Testing
 processNames.dbpedia = DBpedia Annotation
 prompts.mallet_classify-file = Select classifier to use
 prompts.mallet_lda_jstor = Add JSTOR DFR set
+prompts.resetOutput = This will erase the results of all classifiers, topic models, etc. Are you sure you want to do this?
