--- a/chrome/locale/en-US/papermachines/papermachines.dtd
+++ b/chrome/locale/en-US/papermachines/papermachines.dtd
@@ -4,7 +4,7 @@
 
 <!ENTITY papermachines.collectionmenu.wordcloud				"Word Cloud">
 <!ENTITY papermachines.collectionmenu.wordcloud_large		"Single Word Cloud">
-<!ENTITY papermachines.collectionmenu.wordcloud_multiple	"Multiple Word Clouds">
+<!ENTITY papermachines.collectionmenu.wordcloud_multiple	"Word Clouds by Subcollection">
 <!ENTITY papermachines.collectionmenu.phrasenet				"Phrase Net">
 <!ENTITY papermachines.collectionmenu.geoparse				"Geoparser">
 <!ENTITY papermachines.collectionmenu.dbpedia				"DBPedia Annotation">
