switch to python extraction

--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -1,4 +1,4 @@
-progress.extractText			= Pre-processing collection %S
+processNames.extract = Extracting
 processNames.wordcloud = Word Cloud
 processNames.wordcloud_large = Word Cloud
 processNames.wordcloud_multiple = Multiple Word Clouds
