properly resets after extraction

--- a/chrome/locale/en-US/papermachines/papermachines.dtd
+++ b/chrome/locale/en-US/papermachines/papermachines.dtd
@@ -4,7 +4,7 @@
 
 <!ENTITY papermachines.collectionmenu.wordcloud				"Word Cloud">
 <!ENTITY papermachines.collectionmenu.wordcloud_large		"Word Cloud">
-<!ENTITY papermachines.collectionmenu.wordcloud_large		"Word Cloud (TF-IDF filtered)">
+<!ENTITY papermachines.collectionmenu.wordcloud_large_tfidf	"Word Cloud (TF-IDF filtered)">
 <!ENTITY papermachines.collectionmenu.wordcloud_multiple	"Word Clouds by Subcollection">
 <!ENTITY papermachines.collectionmenu.phrasenet				"Phrase Net">
 <!ENTITY papermachines.collectionmenu.geoparse				"Geoparser">
