--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -1,14 +1,19 @@
 processNames.extract = Extracting
 processNames.wordcloud = Word Cloud
-processNames.wordcloud_large = Word Cloud
+processNames.wordcloud_large = Large Word Cloud
 processNames.wordcloud_multiple = Multiple Word Clouds
+processNames.wordcloud_chronological = Chronological Word Clouds
 processNames.phrasenet = Phrase Net
 processNames.geoparse = Geoparser
 processNames.mallet_lda = Topic Modeling
-processNames.mallet_lda_categorical = Topic Modeling
+processNames.mallet_lda_categorical = Topic Modeling by Subcollection
+processNames.mallet_lda_jstor = Topic Modeling with JSTOR DFR
 processNames.mallet_train-classifier = Classifier Training
 processNames.mallet_classify-file = Classifier Testing
 processNames.dbpedia = DBpedia Annotation
 prompts.mallet_classify-file = Select classifier to use
 prompts.mallet_lda_jstor = Add JSTOR DFR set
+prompts.wordcloud_chronological = Enter time interval in days (default: 90)
+prompts.export_dir = Choose directory in which to save (a new folder will be created)
+prompts.export_processes = Choose process results to export
 prompts.resetOutput = This will erase the results of all classifiers, topic models, etc. Are you sure you want to do this?
