--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -11,9 +11,24 @@ processNames.mallet_lda_jstor = Topic Modeling with JSTOR DFR
 processNames.mallet_train-classifier = Classifier Training
 processNames.mallet_classify-file = Classifier Testing
 processNames.dbpedia = DBpedia Annotation
+processNames.failed = An error has occurred; the log is displayed below. Retrying process in 15 seconds.
+processNames.nolog = No log file found.
 prompts.mallet_classify-file = Select classifier to use
 prompts.mallet_lda_jstor = Add JSTOR DFR set
+prompts.mallet_lda_MI = Must run topic modeling (by time or subcollection) first
 prompts.wordcloud_chronological = Enter time interval in days (default: 90)
 prompts.export_dir = Choose directory in which to save (a new folder will be created)
 prompts.export_processes = Choose process results to export
 prompts.resetOutput = This will erase the results of all classifiers, topic models, etc. Are you sure you want to do this?
+paramLabels.mallet_lda.topics = Number of topics
+paramLabels.mallet_lda.stemming = Porter stemming
+paramLabels.mallet_lda.tfidf = tf*idf filtering
+paramLabels.mallet_lda.min_df = minimum doc frequency (for tf*idf)
+paramLabels.mallet_lda_jstor.topics = Number of topics
+paramLabels.mallet_lda_jstor.stemming = Porter stemming
+paramLabels.mallet_lda_jstor.tfidf = tf*idf filtering
+paramLabels.mallet_lda_jstor.min_df = minimum doc frequency (for tf*idf)
+paramLabels.mallet_lda_categorical.min_df = minimum doc frequency (for tf*idf)
+paramLabels.mallet_lda_categorical.stemming = Porter stemming
+paramLabels.mallet_lda_categorical.tfidf = tf*idf filtering
+paramLabels.mallet_lda_categorical.min_df = minimum doc frequency (for tf*idf)
