--- a/chrome/locale/en-US/papermachines/papermachines.dtd
+++ b/chrome/locale/en-US/papermachines/papermachines.dtd
@@ -24,6 +24,7 @@
 <!ENTITY papermachines.collectionmenu.mallet_lda				"By Time">
 <!ENTITY papermachines.collectionmenu.mallet_lda_jstor			"By Time (With JSTOR DFR)">
 <!ENTITY papermachines.collectionmenu.mallet_lda_categorical	"By Subcollection">
+<!ENTITY papermachines.collectionmenu.mallet_lda_MI		"Mutual Information">
 
 <!ENTITY papermachines.collectionmenu.mallet_classify			"Classification">
 <!ENTITY papermachines.collectionmenu.mallet_train-classifier	"Train Classifier">
