display logs on failure

--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -11,7 +11,7 @@ processNames.mallet_lda_jstor = Topic Modeling with JSTOR DFR
 processNames.mallet_train-classifier = Classifier Training
 processNames.mallet_classify-file = Classifier Testing
 processNames.dbpedia = DBpedia Annotation
-processNames.failed = An error has occurred; the log is displayed below. Retrying process in 15 seconds.
+processNames.failed = The process log is displayed below. Refreshing status in 15 seconds.
 processNames.nolog = No log file found.
 prompts.mallet_classify-file = Select classifier to use
 prompts.mallet_lda_jstor = Add JSTOR DFR set
