--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -17,6 +17,7 @@ prompts.mallet_classify-file = Select classifier to use
 prompts.mallet_lda_jstor = Add JSTOR DFR set
 prompts.mallet_lda_MI = Must run topic modeling (by time or subcollection) first
 prompts.wordcloud_chronological = Enter time interval in days (default: 90)
+prompts.wordcloud_multiple = Select filter method
 prompts.export_dir = Choose directory in which to save (a new folder will be created)
 prompts.export_processes = Choose process results to export
 prompts.resetOutput = This will erase the results of all classifiers, topic models, etc. Are you sure you want to do this?
@@ -24,11 +25,9 @@ paramLabels.mallet_lda.topics = Number of topics
 paramLabels.mallet_lda.stemming = Porter stemming
 paramLabels.mallet_lda.tfidf = tf*idf filtering
 paramLabels.mallet_lda.min_df = minimum doc frequency (for tf*idf)
-paramLabels.mallet_lda_jstor.topics = Number of topics
-paramLabels.mallet_lda_jstor.stemming = Porter stemming
-paramLabels.mallet_lda_jstor.tfidf = tf*idf filtering
-paramLabels.mallet_lda_jstor.min_df = minimum doc frequency (for tf*idf)
-paramLabels.mallet_lda_categorical.min_df = minimum doc frequency (for tf*idf)
-paramLabels.mallet_lda_categorical.stemming = Porter stemming
-paramLabels.mallet_lda_categorical.tfidf = tf*idf filtering
-paramLabels.mallet_lda_categorical.min_df = minimum doc frequency (for tf*idf)
+paramLabels.mallet_lda.iterations =	Number of iterations
+paramLabels.mallet_lda.burn_in = Burn-in (iterations before estimating hyperparameters)
+paramLabels.mallet_lda.optimize_interval = Iterations between estimation of hyperparameters
+paramLabels.mallet_lda.alpha =	Alpha (smoothing over topic distribution)
+paramLabels.mallet_lda.beta = Beta (smoothing over unigram distribution)
+paramLabels.mallet_lda.symmetric_alpha = Symmetric alpha (may eliminate small topics, but may spread common words over several topics)
