--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -13,6 +13,7 @@ processNames.mallet_classify-file = Classifier Testing
 processNames.dbpedia = DBpedia Annotation
 processNames.failed = The process log is displayed below. Refreshing status in 15 seconds.
 processNames.nolog = No log file found.
+processNames.bulk_import = Periodical Import
 prompts.mallet_classify-file = Select classifier to use
 prompts.mallet_lda_jstor = Add JSTOR DFR set
 prompts.mallet_lda_MI = Must run topic modeling (by time or subcollection) first
@@ -20,6 +21,7 @@ prompts.wordcloud_chronological = Enter time interval in days (default: 90)
 prompts.wordcloud_multiple = Select filter method
 prompts.export_dir = Choose directory in which to save (a new folder will be created)
 prompts.export_processes = Choose process results to export
+prompts.import_dir = Choose directory to import
 prompts.resetOutput = This will erase the results of all classifiers, topic models, etc. Are you sure you want to do this?
 paramLabels.mallet_lda.topics = Number of topics
 paramLabels.mallet_lda.stemming = Porter stemming
@@ -31,3 +33,7 @@ paramLabels.mallet_lda.optimize_interval = Iterations between estimation of hype
 paramLabels.mallet_lda.alpha =	Alpha (smoothing over topic distribution)
 paramLabels.mallet_lda.beta = Beta (smoothing over unigram distribution)
 paramLabels.mallet_lda.symmetric_alpha = Symmetric alpha (may eliminate small topics, but may spread common words over several topics)
+paramLabels.bulk_import.title = Title prefix
+paramLabels.bulk_import.pubtitle = Publication title
+paramLabels.bulk_import.dateformat = Date format
+paramLabels.bulk_import.startingoffset = Starting offset
