--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -13,12 +13,13 @@ processNames.mallet_classify-file = Classifier Testing
 processNames.dbpedia = DBpedia Annotation
 processNames.failed = The process log is displayed below. Refreshing status in 15 seconds.
 processNames.nolog = No log file found.
-processNames.bulk_import = Periodical Import
+processNames.bulk_import = Periodical PDF Import
 prompts.mallet_classify-file = Select classifier to use
 prompts.mallet_lda_jstor = Add JSTOR DFR set
 prompts.mallet_lda_MI = Must run topic modeling (by time or subcollection) first
 prompts.wordcloud_chronological = Enter time interval in days (default: 90)
 prompts.wordcloud_multiple = Select filter method
+prompts.phrasenet_custom = Enter a regular expression:
 prompts.export_dir = Choose directory in which to save (a new folder will be created)
 prompts.export_processes = Choose process results to export
 prompts.import_dir = Choose directory to import
@@ -35,5 +36,8 @@ paramLabels.mallet_lda.beta = Beta (smoothing over unigram distribution)
 paramLabels.mallet_lda.symmetric_alpha = Symmetric alpha (may eliminate small topics, but may spread common words over several topics)
 paramLabels.bulk_import.title = Title prefix
 paramLabels.bulk_import.pubtitle = Publication title
-paramLabels.bulk_import.dateformat = Date format
+paramLabels.bulk_import.guessdate = Guess date from PDF metadata
+paramLabels.bulk_import.dateformat = Date format (get date from directory names)
+paramLabels.bulk_import.guessissue = Extract issue from PDF fulltext
+paramLabels.bulk_import.issueregex = Issue search pattern
 paramLabels.bulk_import.startingoffset = Starting offset
