--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -8,6 +8,7 @@ processNames.geoparse = Geoparser
 processNames.mallet_lda = Topic Modeling
 processNames.mallet_lda_categorical = Topic Modeling by Subcollection
 processNames.mallet_lda_jstor = Topic Modeling with JSTOR DFR
+processNames.mallet_lda_MI = Mutual Information for Subcollections
 processNames.mallet_train-classifier = Classifier Training
 processNames.mallet_classify-file = Classifier Testing
 processNames.dbpedia = DBpedia Annotation
@@ -19,7 +20,7 @@ prompts.mallet_lda_jstor = Add JSTOR DFR set
 prompts.mallet_lda_MI = Must run topic modeling (by time or subcollection) first
 prompts.wordcloud_chronological = Enter time interval in days (default: 90)
 prompts.wordcloud_multiple = Select filter method
-prompts.phrasenet_custom = Enter a regular expression:
+prompts.phrasenet_custom = Enter a regular expression (substitute x and y for words of interest):
 prompts.export_dir = Choose directory in which to save (a new folder will be created)
 prompts.export_processes = Choose process results to export
 prompts.import_dir = Choose directory to import
