check for subcollections before allowing mutual information

--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -18,6 +18,7 @@ processNames.bulk_import = Periodical PDF Import
 prompts.mallet_classify-file = Select classifier to use
 prompts.mallet_lda_jstor = Add JSTOR DFR set
 prompts.mallet_lda_MI = Must run topic modeling (by time or subcollection) first
+prompts.mallet_lda_MI_no_classify = Must have subcollections or a tested classifier
 prompts.wordcloud_chronological = Enter time interval in days (default: 90)
 prompts.wordcloud_multiple = Select filter method
 prompts.phrasenet_custom = Enter a regular expression (substitute x and y for words of interest):
