--- a/chrome/locale/en-US/papermachines/papermachines.dtd
+++ b/chrome/locale/en-US/papermachines/papermachines.dtd
@@ -63,6 +63,8 @@
 <!ENTITY papermachines.prefs.general.extract_pdf		"PDFs with OCR text">
 <!ENTITY papermachines.prefs.general.extract_notes		"Notes">
 <!ENTITY papermachines.prefs.general.extract_tags		"Tags">
+<!ENTITY papermachines.prefs.general.python_exe 		"Path to Python executable: ">
+
 
 <!ENTITY papermachines.prefs.lda.topics					"Number of topics: ">
 <!ENTITY papermachines.prefs.lda.iterations				"Number of iterations: ">
