--- a/chrome/locale/en-US/papermachines/papermachines.dtd
+++ b/chrome/locale/en-US/papermachines/papermachines.dtd
@@ -61,6 +61,7 @@
 <!ENTITY papermachines.prefs.general.extract_txt		"Plain Text">
 <!ENTITY papermachines.prefs.general.extract_html		"Web Snapshots (HTML)">
 <!ENTITY papermachines.prefs.general.extract_pdf		"PDFs with OCR text">
+<!ENTITY papermachines.prefs.general.extract_livepages	"Live Web Pages">
 <!ENTITY papermachines.prefs.general.extract_notes		"Notes">
 <!ENTITY papermachines.prefs.general.extract_tags		"Tags">
 <!ENTITY papermachines.prefs.general.python_exe 		"Path to Python executable: ">
