--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -9,6 +9,7 @@ processNames.mallet_lda = Topic Modeling
 processNames.mallet_lda_categorical = Topic Modeling by Subcollection
 processNames.mallet_lda_jstor = Topic Modeling with JSTOR DFR
 processNames.mallet_lda_MI = Mutual Information for Subcollections
+processNames.mallet_dmr = Dirichlet Multinomial Regression
 processNames.mallet_train-classifier = Classifier Training
 processNames.mallet_classify-file = Classifier Testing
 processNames.dbpedia = DBpedia Annotation
