--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -27,6 +27,10 @@ prompts.export_dir = Choose directory in which to save (a new folder will be cre
 prompts.export_processes = Choose process results to export
 prompts.import_dir = Choose directory to import
 prompts.resetOutput = This will erase the results of all classifiers, topic models, etc. Are you sure you want to do this?
+paramLabels.mallet_dmr.topics = Number of topics
+paramLabels.mallet_dmr.stemming = Porter stemming
+paramLabels.mallet_dmr.tfidf = tf*idf filtering
+paramLabels.mallet_dmr.min_df = minimum doc frequency (for tf*idf)
 paramLabels.mallet_lda.topics = Number of topics
 paramLabels.mallet_lda.stemming = Porter stemming
 paramLabels.mallet_lda.tfidf = tf*idf filtering
