topic modeling opacity gradient bugfix

--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -26,6 +26,7 @@ prompts.phrasenet_custom = Enter a regular expression (substitute x and y for wo
 prompts.export_dir = Choose directory in which to save (a new folder will be created)
 prompts.export_processes = Choose process results to export
 prompts.import_dir = Choose directory to import
+prompts.empty = No extracted texts found.
 prompts.resetOutput = This will erase the results of all classifiers, topic models, etc. Are you sure you want to do this?
 paramLabels.mallet_dmr.topics = Number of topics
 paramLabels.mallet_dmr.stemming = Porter stemming
