--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -16,6 +16,7 @@ processNames.dbpedia = DBpedia Annotation
 processNames.failed = The process log is displayed below. Refreshing status in 15 seconds.
 processNames.nolog = No log file found.
 processNames.bulk_import = Periodical PDF Import
+processNames.change_field = Bulk Edit Metadata
 prompts.mallet_classify-file = Select classifier to use
 prompts.mallet_lda_jstor = Add JSTOR DFR set
 prompts.mallet_lda_MI = Must run topic modeling (by time or subcollection) first
@@ -49,3 +50,6 @@ paramLabels.bulk_import.dateformat = Date format (get date from directory names)
 paramLabels.bulk_import.guessissue = Extract issue from PDF fulltext
 paramLabels.bulk_import.issueregex = Issue search pattern
 paramLabels.bulk_import.startingoffset = Starting offset
+paramLabels.change_field.field = Field to change
+paramLabels.change_field.value = Value
+paramLabels.change_field.force = Overwrite?
