--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -33,6 +33,7 @@ paramLabels.mallet_dmr.topics = Number of topics
 paramLabels.mallet_dmr.stemming = Porter stemming
 paramLabels.mallet_dmr.tfidf = tf*idf filtering
 paramLabels.mallet_dmr.min_df = minimum doc frequency (for tf*idf)
+paramLabels.mallet_dmr.features = comma-separated list of features (e.g. decade, place, label)
 paramLabels.mallet_lda.topics = Number of topics
 paramLabels.mallet_lda.stemming = Porter stemming
 paramLabels.mallet_lda.tfidf = tf*idf filtering
