--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -4,7 +4,9 @@ processNames.wordcloud_large = Large Word Cloud
 processNames.wordcloud_multiple = Multiple Word Clouds
 processNames.wordcloud_chronological = Chronological Word Clouds
 processNames.phrasenet = Phrase Net
-processNames.geoparse = Geoparser
+processNames.geoparser_flightpaths = Flight Paths
+processNames.geoparser_heatmap = Heat Map
+processNames.geoparser_export = Geoparser Export
 processNames.mallet_lda = Topic Modeling
 processNames.mallet_lda_categorical = Topic Modeling by Subcollection
 processNames.mallet_lda_jstor = Topic Modeling with JSTOR DFR
