--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -13,8 +13,8 @@ processNames.mallet_lda_jstor = Topic Modeling with JSTOR DFR
 processNames.mallet_lda_MI = Mutual Information for Subcollections
 processNames.mallet_dmr = Dirichlet-Multinomial Regression
 processNames.mallet_dmr_jstor = Dirichlet-Multinomial Regression with JSTOR DFR
-processNames.mallet_train-classifier = Classifier Training
-processNames.mallet_classify-file = Classifier Testing
+processNames.mallet_train-classifier = MaxEnt Classifier Training
+processNames.mallet_classify-file = MaxEnt Classifier Testing
 processNames.dbpedia = DBpedia Annotation
 processNames.failed = The process log is displayed below. Refreshing status in 15 seconds.
 processNames.nolog = No log file found.
